--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,19 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.32.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
-    "nodemon": "^3.1.10"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.10",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.23",
